# training-operator

./: .golangci-kal.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  go.mod  go.sum
.github/workflows/: build-and-push-images.yaml  gh-workflow-approve.yaml  publish-helm-charts.yaml  test-e2e-gpu.yaml  test-e2e.yaml  test-helm.yaml  test-python.yaml  trivy-scan.yaml
api/openapi-spec/: swagger.json
api/python_api/kubeflow_trainer_api/: __init__.py
charts/kubeflow-trainer/: Chart.yaml  README.md  values.yaml
charts/kubeflow-trainer/crds/: trainer.kubeflow.org_clustertrainingruntimes.yaml  trainer.kubeflow.org_trainjobs.yaml
cmd/data_cache/: Dockerfile
cmd/initializers/dataset/: requirements.txt
cmd/trainer-controller-manager/: main.go
docs/release/: README.md
examples/flux/: flux-interactive.yaml  flux-runtime.yaml  lammps-train-gpus.yaml  lammps-train-job.yaml
examples/local/: local-container-mnist.ipynb  local-training-mnist.ipynb
hack/: e2e-run-notebook.sh  e2e-setup-cluster.sh  e2e-setup-gpu-cluster.sh  gpu-time-slicing.yml  violation_exception_v1alpha1.list
hack/python-api/: gen-api.sh
pkg/config/: config_test.go  validation.go
pkg/constants/: constants.go
pkg/controller/: clustertrainingruntime_controller_test.go  trainingruntime_controller_test.go  trainjob_controller.go
pkg/data_cache/: Cargo.toml
pkg/data_cache/test/: Cargo.toml
pkg/runtime/core/: core.go  (+4 more)
pkg/statusserver/: middleware_test.go  server_test.go
pkg/webhooks/: trainjob_webhook.go  trainjob_webhook_test.go
test/e2e/: e2e_test.go  suite_test.go
(+96 files in other folders)
