[package]
name = "kubeflow_data_cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.23"
tokio = { version = "1.50.0", features = ["full"] }
datafusion = "47.0.0"
arrow = "55.0.0"
arrow-schema = "55.0.0"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
iceberg-datafusion = "0.6.0"
iceberg = "0.6.0"
futures = "0.3.32"
arrow-flight = "55.0.0"
tonic = "0.12.3"
bytes = "1.11.1"
bincode = "2.0.1"
hickory-resolver = "0.24.2"
axum = "0.8"
tower = "0.5"
hyper = "1.0"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }

[[bin]]
name = "head"
path = "cmd/head/main.rs"

[[bin]]
name = "worker"
path = "cmd/worker/main.rs"
