[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
arrow-flight = "58.0.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.5"
bytes = "1.11.1"
bincode = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
clap = { version = "4.5", features = ["derive", "env"] }

[[bin]]
name = "client"
path = "src/main.rs"
